@@ -5,8 +5,8 @@ plugins {
 }
 
 group 'org.kinotic'
-version '2.0.1'
-sourceCompatibility = '11'
+version "${structuresVersion}"
+sourceCompatibility = '21'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -24,7 +24,6 @@ dependencyManagement {
         dependency "org.elasticsearch:elasticsearch:${elasticClientVersion}"
         dependency "org.elasticsearch.client:elasticsearch-rest-client:${elasticClientVersion}"
         dependency "org.elasticsearch.client:elasticsearch-rest-high-level-client:${elasticClientVersion}"
-        dependency "org.apache.kafka:kafka-clients:${kafkaVersion}"
         dependency "org.apache.lucene:lucene-analyzers-common:${luceneVersion}"
         dependency "org.apache.lucene:lucene-backwards-codecs:${luceneVersion}"
         dependency "org.apache.lucene:lucene-core:${luceneVersion}"
@@ -57,4 +56,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    environment("JAVA_TOOL_OPTIONS", "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED")
 }
